# kortecx

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cuda  Dockerfile.inference  GLOSSARY.md  LICENSE  LICENSE.md  Makefile  README.md  SECURITY.md  STRATEGY.md  THIRD-PARTY-NOTICES.md  WARNINGS.md  clippy.toml  deny.toml  docker-compose.yml  feature-ledger.toml  justfile  kortecx.config.json  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml  rustfmt.toml  shared-paths.toml  start.sh
bindings/python/: .gitignore  README.md  codegen.sh  pyproject.toml
bindings/python/examples/: async_invoke.py  invoke_wait.py  stream_events.py
bindings/python/tests/: conftest.py  test_app.py  test_appbundle.py  test_blueprints.py  test_chains.py  test_chains_property.py  test_content_models.py  test_context_edit.py  test_contract_e2e.py  test_critic_verdict.py  test_datasets.py  test_doctests.py  test_flow.py  test_monitoring.py  test_motes.py  test_run_agent.py  test_runs_recipes.py  test_secrets_triggers.py  test_server_info.py  test_skills.py  test_swarm_personas.py  test_teams_grants.py  test_tools.py  test_toolscout.py  test_unit.py  test_vision_attach.py
crates/kx-app/: Cargo.toml
crates/kx-app/src/: envelope.rs  lib.rs
crates/kx-app/tests/: dep_wall.rs  golden_corpus.rs  secret_leak.rs
crates/kx-appbundle/: Cargo.toml
crates/kx-appbundle/src/: lib.rs
crates/kx-appbundle/tests/: golden.rs
crates/kx-audit/: Cargo.toml
crates/kx-audit/src/: error.rs  event.rs  in_memory.rs  jsonl.rs  lib.rs  sink.rs  wire.rs
crates/kx-audit/tests/: boundary.rs  scale.rs
crates/kx-blueprint/: Cargo.toml
crates/kx-blueprint/src/: lib.rs
crates/kx-bundle/: Cargo.toml
crates/kx-bundle/src/: bundle.rs  lib.rs
crates/kx-bundle/tests/: fingerprint_golden.rs
crates/kx-capability/: Cargo.toml
crates/kx-capability/src/: broker.rs  capability.rs  errors.rs  fs_confine.rs  fs_list.rs  fs_read.rs  fs_write.rs  lib.rs  local.rs  request.rs  tests.rs  token.rs
crates/kx-capability/tests/: concurrency.rs  proptest_broker.rs  stress_policy.rs
crates/kx-capture/: Cargo.toml
crates/kx-capture/src/: lib.rs  record.rs  scope.rs  store.rs
crates/kx-capture/tests/: boundary.rs  scale.rs
crates/kx-catalog/: Cargo.toml
crates/kx-catalog/src/: action.rs  advertise.rs  body.rs  discovery.rs  discovery_index.rs  entry.rs  governed.rs  grant.rs  in_memory.rs  in_memory_ledger.rs  in_memory_version_ledger.rs  ledger.rs  lib.rs  metadata.rs  party.rs  path.rs  registry.rs  signature.rs  sqlite_body_ledger.rs  sqlite_catalog.rs  sqlite_grant_ledger.rs  sqlite_util.rs  sqlite_version_ledger.rs  tests.rs  version.rs  version_ledger.rs
crates/kx-catalog/tests/: action_selection_safety.rs  advertise.rs  body.rs  durable_backends.rs  proptest_discovery.rs  proptest_grants.rs  proptest_metadata.rs  proptest_registry.rs  proptest_signature.rs  proptest_versions.rs  scale.rs  security_governance.rs
crates/kx-chaos/: Cargo.toml
crates/kx-chaos/src/: assertions.rs  broker.rs  cluster.rs  lib.rs  plan.rs  prng.rs  scenario.rs  workflow.rs
crates/kx-chaos/tests/: exit_gate.rs  seed_sweep.rs
crates/kx-chunk/: Cargo.toml
crates/kx-chunk/src/: chunk.rs  lib.rs  tests.rs
crates/kx-cli/: Cargo.toml
crates/kx-cli/src/: cli.rs  client.rs  error.rs  format.rs  hex.rs  lib.rs  main.rs  wait.rs
crates/kx-cli/tests/: auth_e2e.rs  client_e2e.rs  dep_wall.rs  events_follow_e2e.rs  invoke_errors_e2e.rs  runtime_parity.rs  serve_zero_config_e2e.rs  shared_boundary.rs  signatures_e2e.rs  tools_e2e.rs  wait_e2e.rs
crates/kx-content/: Cargo.toml
crates/kx-content/src/: in_memory.rs  lib.rs  local_fs.rs  sniff.rs
crates/kx-content/tests/: proptest_store.rs  rkyv_archived.rs
crates/kx-context-assembler/: Cargo.toml
crates/kx-context-assembler/src/: assemble.rs  errors.rs  lib.rs  tests.rs  types.rs
crates/kx-context-assembler/tests/: concurrency.rs  proptest_assembler.rs
crates/kx-coordinator/: Cargo.toml
crates/kx-coordinator/benches/: commit_throughput.rs
crates/kx-critic/: Cargo.toml
crates/kx-critic-types/: Cargo.toml
crates/kx-dataset-bm25/: Cargo.toml
crates/kx-dataset-hnsw/: Cargo.toml
engine/: .env.example  README.md  pyproject.toml
engine/mcp/: file_reader.py  hello_world.py  react_page_generator.py
engine/mcp_scripts/: generate_a_console_log_script.ts  generate_a_console_log_script.ts.meta.json  script_to_generate_a_standalone.py
engine/migrations/: quorum.sql
engine/tests/: conftest.py  test_config.py  test_embed_agent.py  test_embed_prism.py  test_execution_audit.py  test_expert_artifacts.py  test_expert_manager.py  test_experts_router.py  test_hf_embedding_fallback.py  test_local_inference.py  test_plan_generator.py  test_plan_store.py  test_quorum.py  test_step_artifacts.py  test_synthesis.py  test_system_stats.py
engine/uploads/: 79fe29f171c4.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode_entry.rs  decode_plan.rs  fold_checkpoint.rs  parse_tool_call.rs
kx-journal/: Cargo.toml
kx-journal/src/: entry.rs  in_memory.rs  lib.rs  sqlite.rs
kx-journal/tests/: dod.rs  proptest_entry.rs
kx-llamacpp/: Cargo.toml  build.rs
kx-llamacpp-sys/: Cargo.toml  PIN.md  build.rs
kx-llamacpp-sys/src/: lib.rs
kx-llamacpp/examples/: chat.rs  embed.rs  generate.rs
kx-llamacpp/src/: backend.rs  batch.rs  chat.rs  context.rs  error.rs  generator.rs  lib.rs  model.rs  sampler.rs  vocab.rs
kx-llamacpp/tests/: concurrency.rs  proptest_vocab.rs  smoke.rs  stress.rs
kx-model-validator/: Cargo.toml
kx-model-validator/src/: lib.rs
kx-model-validator/tests/: proptest_check.rs
kx-mote/: Cargo.toml
kx-mote/src/: lib.rs
kx-mote/tests/: concurrency.rs  identity.rs  proptest_topology.rs  smoke.rs
kx-projection/: Cargo.toml
kx-projection/src/: lib.rs
kx-projection/tests/: cross_product.rs  dod.rs  proptest_fold.rs
kx-warrant/: Cargo.toml
kx-warrant/src/: lib.rs
kx-warrant/tests/: concurrency.rs  proptest_warrant.rs
(+2099 files in other folders)
