[workspace]
resolver = "2"
# All workspace member crates live under `crates/`. The parent-folder
# convention (vs. crates at the workspace root) keeps the repo root clean —
# `docs/`, `bindings/`, `scripts/`, and future top-level dirs sit alongside
# `crates/` without ambiguity. Cargo abstracts crate placement entirely;
# `use kx_mote::...` etc. are by name, not path.
members = [
    "crates/kx-mote",
    "crates/kx-content",
    "crates/kx-journal",
    "crates/kx-projection",
    "crates/kx-llamacpp-sys",
    "crates/kx-llamacpp",
    "crates/kx-model-validator",
    "crates/kx-warrant",
    "crates/kx-tool-registry",
    "crates/kx-context-assembler",
    "crates/kx-memoizer",
    "crates/kx-normalizer",
    "crates/kx-inference",
    "crates/kx-capability",
    "crates/kx-executor",
    "crates/kx-scheduler",
    "crates/kx-tiering",
    "crates/kx-runtime",
    "crates/kx-proto",
    "crates/kx-coordinator",
    "crates/kx-worker",
    "crates/kx-chaos",
    "crates/kx-workflow",
    "crates/kx-dataset",
    "crates/kx-critic-types",
    "crates/kx-critic",
    "crates/kx-capture",
    "crates/kx-refusal",
    "crates/kx-mcp",
    "crates/kx-planner",
    "crates/kx-catalog",
    "crates/kx-fleet",
    "crates/kx-model-harness",
    "crates/kx-gateway-core",
    "crates/kx-invoke",
    "crates/kx-model-store",
]
exclude = [
    "kx-cloud",
    # Language bindings — out-of-workspace per Item 8 of the repo-baseline
    # config sweep. Each binding has its own Cargo workspace (or
    # language-native build system) and depends on kortecx core via path /
    # published-version deps. Bindings depend on core; core NEVER depends
    # on a binding. See `bindings/README.md` for the inward-only rule.
    "bindings/python",
    "bindings/typescript",
]

[workspace.package]
edition      = "2021"
rust-version = "1.94.0"
license      = "Apache-2.0"
authors      = ["kortecx contributors"]
repository   = "https://github.com/Kortecx/kortecx"

[workspace.dependencies]
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror          = "1"
bincode            = { version = "2", features = ["serde"] }
blake3             = "1"
bytes              = { version = "1", features = ["serde"] }
smallvec           = { version = "1", features = ["serde"] }
serde              = { version = "1", features = ["derive"] }
# JSON well-formedness for the kx-critic `Json` schema check (validation-only —
# values are never decoded to floats, so no NaN/float-ordering on any path).
serde_json         = "1"
# Deterministic PII-class scanners (kx-critic). The regex engine is leftmost-first
# and fully deterministic; patterns are compiled once via LazyLock.
regex              = "1"
proptest           = "1"
tempfile           = "3"
# Benchmark harness (dev-only). default-features off drops the html_reports
# (plotters) + rayon trees to keep the dep surface — and cargo-deny — minimal;
# `cargo_bench_support` is the bit the `harness = false` benches actually need.
criterion          = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
rkyv               = "0.8"
rusqlite           = { version = "0.32", features = ["bundled"] }
# Workspace member path-deps carry an explicit `version = "0.0.1"` matching
# each member's `[package].version`. Without it, cargo-deny flags path-only
# deps as wildcards (the version constraint is unconstrained). The version
# field also takes effect on `cargo publish` — replacing the path during
# publish with the version requirement here. All paths point under
# `crates/` per the workspace's parent-folder layout convention.
kx-mote              = { path = "crates/kx-mote",              version = "0.0.1" }
kx-content           = { path = "crates/kx-content",           version = "0.0.1" }
kx-journal           = { path = "crates/kx-journal",           version = "0.0.1" }
kx-projection        = { path = "crates/kx-projection",        version = "0.0.1" }
kx-llamacpp-sys      = { path = "crates/kx-llamacpp-sys",      version = "0.0.1" }
kx-llamacpp          = { path = "crates/kx-llamacpp",          version = "0.0.1" }
kx-model-validator   = { path = "crates/kx-model-validator",   version = "0.0.1" }
kx-warrant           = { path = "crates/kx-warrant",           version = "0.0.1" }
kx-tool-registry     = { path = "crates/kx-tool-registry",     version = "0.0.1" }
kx-context-assembler = { path = "crates/kx-context-assembler", version = "0.0.1" }
kx-memoizer          = { path = "crates/kx-memoizer",          version = "0.0.1" }
kx-normalizer        = { path = "crates/kx-normalizer",        version = "0.0.1" }
# `default-features = false` (no llama.cpp FFI) is the WORKSPACE default for every
# crate that depends on kx-inference, so the runtime's closure builds with no C++
# toolchain (`cargo install kx-runtime`). It must live here, not on a member edge —
# Cargo ignores member-level `default-features` on an inherited workspace dep. The
# one crate that needs the in-process backend, kx-model-harness, opts back in with
# `features = ["llamacpp"]`. kx-inference's own `default = ["llamacpp"]` keeps its
# own build/test/doctests on the FFI when it is itself the target.
kx-inference         = { path = "crates/kx-inference",         version = "0.0.1", default-features = false }
kx-capability        = { path = "crates/kx-capability",        version = "0.0.1" }
kx-executor          = { path = "crates/kx-executor",          version = "0.0.1" }
kx-scheduler         = { path = "crates/kx-scheduler",         version = "0.0.1" }
kx-proto             = { path = "crates/kx-proto",             version = "0.0.1" }
kx-coordinator       = { path = "crates/kx-coordinator",       version = "0.0.1" }
kx-worker            = { path = "crates/kx-worker",            version = "0.0.1" }
# The single-node engine — kx-chaos reuses its topology helpers (`derive_child_motes`,
# `demo_topology_decision`) to check child-identity determinism under a shaper death.
kx-runtime           = { path = "crates/kx-runtime",           version = "0.0.1" }
# The workflow engine (codename Morphic, P4.1) — compiles a WorkflowDef to a
# Mote DAG. Sits above the scheduler; emits kx-mote + kx-warrant types only.
kx-workflow          = { path = "crates/kx-workflow",          version = "0.0.1" }
# The data-management seam (P4.1c) — typed (tensor/vector/blob/multi-modal)
# DataStore/Dataset/RetrievalIndex over committed content; journal-authoritative.
kx-dataset           = { path = "crates/kx-dataset",           version = "0.0.1" }
# Deterministic-critic vocabulary (P4.2) — CriticVerdict / CriticReason / CheckSpec.
# Parser-free + dataset-free so kx-mote can embed a CheckSpec in MoteDef without a
# dependency cycle or inheriting regex/serde_json.
kx-critic-types      = { path = "crates/kx-critic-types",      version = "0.0.1" }
# Deterministic-critic evaluator (P4.2) — the pure/total evaluate(spec, bytes) ->
# CriticVerdict over the four checks (schema / dedup / stat-bounds / PII-leakage).
kx-critic            = { path = "crates/kx-critic",            version = "0.0.1" }
# Step-capture projection (P4.2 pivot) — opt-in, off-truth-path per-Mote capture of
# input/output/reasoning/thinking in blob storage; reuse the action, never the thinking.
kx-capture           = { path = "crates/kx-capture",           version = "0.0.1" }
# Submission-time refusal vocabulary + predicates (M1.3) — a dependency-light LEAF
# (kx-mote / kx-tool-registry / kx-warrant only) so the control-plane kx-coordinator
# can enforce R-1..R-15 + D66 at SubmitMote WITHOUT linking kx-executor's inference
# stack. kx-executor re-exports it for back-compat.
kx-refusal           = { path = "crates/kx-refusal",           version = "0.0.1" }
# MCP adapter (M5.2, D80) — McpCapability, the first production Capability impl, the
# concrete ToolKind::Mcp dispatch. A thin SYNC client (stdio now; ureq HTTP in M5.2b)
# so the broker trait + kx-tool-registry stay dependency-clean (no tokio/rmcp).
kx-mcp               = { path = "crates/kx-mcp",               version = "0.0.1" }
# The planner (M6, D73) — lowers an untrusted model PROPOSAL into a registered
# Mote DAG (decode fail-closed; select ROLES not permissions; compile is the
# structural gate). Sits above the scheduler; PURE lowering lib — depends only on
# kx-workflow/kx-mote/kx-warrant/kx-critic-types (NEVER scheduler/projection/
# executor/inference — the thesis dependency-ban, asserted in kx-model-harness).
kx-planner           = { path = "crates/kx-planner",           version = "0.0.1" }
# The sharable catalog (M7, D82/D83) — the TaskSignature verdict-reuse foundation
# + a content-addressed, idempotent, immutable signature registry. A SEPARATE
# TRUTH (authoritative for WHAT recipes exist); off-journal + off the identity
# path (composes kx-mote/kx-workflow identities, never bumps MoteDef). Depends
# only on kx-mote/kx-workflow/kx-dataset — NEVER the journal or the frozen trio.
kx-catalog           = { path = "crates/kx-catalog",           version = "0.0.1" }
# Teams / fleets (M7, D112) — journaled membership facts + a fail-closed fold +
# composed warrant resolution. Membership is one-level-up delegation
# (intersect(team_warrant, member_role)); nested fleet-of-teams = a bounded multi-hop
# narrow. A SEPARATE TRUTH (off-journal, off the trust path, SN-8). Depends ONLY on
# kx-catalog/kx-warrant; the journal + frozen trio NEVER depend on it (one-way edge).
kx-fleet             = { path = "crates/kx-fleet",             version = "0.0.1" }
# M8 (D120) gateway backend: read-fold (journal -> ProjectionView / GetContent /
# StreamEvents) + propose-proxy (SubmitRun -> coordinator). No journal write path;
# never links the frozen-trio writers (a dep-wall test pins it).
kx-gateway-core      = { path = "crates/kx-gateway-core",      version = "0.0.1" }
# M8 (D121) inbound execution: resolve a published recipe by handle, validate +
# bind args, compile, and submit under intersect(use, step) via the gateway
# RunSubmitter. A composition over the catalog + gateway; adds no new write path.
kx-invoke            = { path = "crates/kx-invoke",            version = "0.0.1" }
# M4 (D108.2) model lifecycle: backend-agnostic, FFI-FREE registry of model
# identity + declared modalities + projector path + fail-closed GGUF validation.
# An InferenceBackend resolves paths/capabilities through its ModelResolver seam;
# the live loaded-model handle cache (kx-inference) keys on its identity_digest.
kx-model-store       = { path = "crates/kx-model-store",       version = "0.0.1" }
bindgen            = "0.70"
cmake              = "0.1"
ureq               = { version = "2", default-features = false, features = ["tls"] }
# Endpoint URL parsing + host extraction for the M5.2b HttpTransport egress sandbox.
# Already in the tree as a transitive dep of ureq (same locked 2.x) — promoting it to
# a direct workspace dep adds no new crate.
url                = "2"
sha2               = "0.10"
# Unix-only deps used by kx-executor's hardened spawn paths (fork+execvp +
# sandbox_init via libc + setrlimit). Both crates are well-audited pure-Rust
# shims; no extra C deps land.
libc               = "0.2"
nix                = { version = "0.29", features = ["process", "signal", "resource", "fs"] }
# Distribution (P2) gRPC stack — kx-proto is the first async + network crate.
# tonic default features (transport + codegen + prost) are kept; TLS is NOT
# enabled (no `ring`/`rustls`) — P2 is plaintext Unix-socket / TCP, hardening is
# a later step. tonic 0.12 pairs with prost 0.13 and the stable tonic-build API.
# protoc is supplied build-time by the pinned `protoc-bin-vendored` binary (no
# system protoc on CI or local; deterministic; ships linux-x86_64 + macos-aarch64).
tonic              = "0.12"
prost              = "0.13"
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
# Server-streaming adapter for the KxGateway `StreamEvents` RPC (M8/D120). Already
# present transitively (tonic pulls it in) — promoting it to a direct dep adds NO
# new crate to the build/deny graph; `tokio_stream::iter` backs the resumable cursor.
tokio-stream       = "0.1"
tonic-build        = "0.12"
protoc-bin-vendored = "3"

[profile.release]
strip         = "symbols"
debug         = false
lto           = "fat"
codegen-units = 1
incremental   = false
panic         = "abort"

[profile.dev]
incremental = false

# ---------------------------------------------------------------------------
# Workspace lint policy (Item 3 of the repo-baseline config sweep).
#
# Encodes the workspace's safety + style golden rules at the policy layer.
# Member crates inherit via `[lints] workspace = true` in their Cargo.toml;
# NEW crates pick up the policy without copy-paste.
#
# Policy model — "deny outside tests, allow in tests":
#   - Library code (src/, excluding `#[cfg(test)]` modules) is held to the
#     deny rules. Documented-infallible production uses carry a TARGETED
#     `#![allow(clippy::expect_used)]` with a comment naming the
#     infallibility precondition.
#   - Inline test modules (`#[cfg(test)] mod tests { ... }`) are exempted
#     via `#![cfg_attr(test, allow(clippy::unwrap_used, clippy::expect_used))]`
#     in each src/lib.rs.
#   - Integration tests under `tests/*.rs` compile as separate crates and
#     don't see `#[cfg(test)]` from the host lib. Each test file carries
#     its own `#![allow(...)]` (the per-test-file allow is the "test
#     exemption" mechanism for integration tests).
#   - Build scripts (build.rs) carry their own allows for env-var
#     unwrap/expect patterns where panic-on-missing is the correct
#     build-time behavior.
#   - `undocumented_unsafe_blocks` is deny everywhere; the PR 4.7 H-3 FFI
#     hardening sweep audited `unsafe` blocks in kx-llamacpp. The bindgen-
#     generated `kx-llamacpp-sys` crate carries a single crate-level allow
#     since the generator emits unsafe blocks mechanically.
#
# Per-crate violation counts at the time of this commit (used as the
# follow-up log for HANDOFF.md §1.8):
#   kx-journal: 56     kx-content: 34          kx-llamacpp: 31
#   kx-tool-registry: 27  kx-context-assembler: 27
#   kx-projection: 19  kx-warrant: 11          kx-mote: 3
#   kx-normalizer: 2   kx-memoizer: 1
# The cleanup-PR sequence migrates these to `?` / typed errors one crate
# at a time; the targeted allows added by this commit are tagged with
# `TODO(workspace.lints cleanup)` to make the migration sites grep-able.
# ---------------------------------------------------------------------------

[workspace.lints.rust]
missing_docs           = "warn"   # public API must be documented (target: deny via cleanup)
unsafe_op_in_unsafe_fn = "deny"   # every op in an `unsafe fn` must still wrap in `unsafe { }`
unreachable_pub        = "warn"   # surface accidentally-public items
unused_must_use        = "deny"   # `Result`s + `#[must_use]` values must be handled

[workspace.lints.clippy]
# Safety golden rules — DENY in library code. Tests exempt via
# `#![cfg_attr(test, allow(...))]` in each src/lib.rs; integration tests
# in `tests/*.rs` files carry their own `#![allow(...)]` (per-file because
# they compile as separate crates). Build scripts (build.rs) carry their
# own allows for env-var unwrap/expect patterns where panic-on-missing is
# the correct behavior. Legitimate documented-infallible production uses
# carry a TARGETED `#![allow(clippy::expect_used)]` with a `// SAFETY:`-
# style comment naming the infallibility (e.g., canonical bincode encode
# over a type with no floats / no non-encodable variants).
unwrap_used                = "deny"
expect_used                = "deny"
undocumented_unsafe_blocks = "deny"   # every `unsafe { ... }` block needs `// SAFETY:`

# Discipline — warn (signal but don't auto-break).
todo          = "warn"
unimplemented = "warn"

# Style — workspace-wide pedantic baseline. Mirrors per-crate `#![warn(clippy::pedantic)]`
# preludes; new crates pick this up without copy-paste. `priority = -1` so any
# individual deny/allow above takes precedence.
pedantic = { level = "warn", priority = -1 }

[workspace.metadata.deb]
# Placeholder. Real cargo-deb packaging lands at P1.13 (kx-runtime binary).
# Convention noted here so future contributors find it in the expected place.
